--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: job-portal-frontend
     env: static
-    buildCommand: npm run build
-    staticPublishPath: ./dist
+    buildCommand: cd frontend && npm ci && npm run build
+    staticPublishPath: frontend/dist
     routes:
       - type: rewrite
         source: /*
