--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && powershell -Command \"Copy-Item 'public\\_redirects' 'dist\\_redirects' -Force\"",
+    "build:linux": "vite build && cp public/_redirects dist/_redirects",
     "lint": "eslint .",
     "preview": "vite preview"
   },
